# J_Reague_scrapying

./: Dockerfile  README.md  pyproject.toml
preprocess/: create_data.py  preprocess.py
scrapying/: scrayping.py
