[tool.poetry]
name = "j-reague-scrapying"
version = "0.1.0"
description = ""
authors = ["yusuke <ritchie.deep.purple@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.1"
beautifulsoup4 = "^4.12.3"
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
lightgbm = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
